Corrected inverse iterating in stl list

--- a/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj
+++ b/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj
@@ -73,10 +73,10 @@
     <OutDir>..\Game</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>..\Game</OutDir>
+    <OutDir>.\Debug</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>..\Game</OutDir>
+    <OutDir>.\Release</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
