--- a/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj.filters
+++ b/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj.filters
@@ -5,80 +5,95 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Archivos de encabezado">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Archivos de recursos">
+    <Filter Include="GameCode">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Archivos de recursos\Core">
+    <Filter Include="GameCode\Core">
       <UniqueIdentifier>{35dfe981-1658-42b4-86f9-53bb326d6079}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de recursos\BasicModules">
+    <Filter Include="GameCode\BasicModules">
       <UniqueIdentifier>{00320b28-b392-44a1-99ae-0e25ec483e3e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de recursos\Auxiliar Code">
+    <Filter Include="GameCode\Auxiliar Code">
       <UniqueIdentifier>{f3eea64d-ef25-40df-ab7b-b926a3a0d3d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="External Libraries">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
-      <Filter>Archivos de recursos\Core</Filter>
+      <Filter>GameCode\Core</Filter>
     </ClCompile>
     <ClCompile Include="ModuleInput.cpp">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClCompile>
     <ClCompile Include="ModuleRender.cpp">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClCompile>
     <ClCompile Include="ModuleTextures.cpp">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClCompile>
     <ClCompile Include="ModuleWindow.cpp">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClCompile>
     <ClCompile Include="Log.cpp">
-      <Filter>Archivos de recursos\Auxiliar Code</Filter>
+      <Filter>GameCode\Auxiliar Code</Filter>
     </ClCompile>
     <ClCompile Include="App.cpp">
-      <Filter>Archivos de recursos\Core</Filter>
+      <Filter>GameCode\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="XMLreader.cpp">
+      <Filter>GameCode\Auxiliar Code</Filter>
+    </ClCompile>
+    <ClCompile Include="PugiXml\src\pugixml.cpp">
+      <Filter>External Libraries</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globlas.h">
-      <Filter>Archivos de recursos\Core</Filter>
+      <Filter>GameCode\Core</Filter>
     </ClInclude>
     <ClInclude Include="Module.h">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClInclude>
     <ClInclude Include="Animation.h">
-      <Filter>Archivos de recursos\Auxiliar Code</Filter>
+      <Filter>GameCode\Auxiliar Code</Filter>
     </ClInclude>
     <ClInclude Include="ModuleInput.h">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClInclude>
     <ClInclude Include="ModuleRender.h">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClInclude>
     <ClInclude Include="ModuleTextures.h">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClInclude>
     <ClInclude Include="ModuleWindow.h">
-      <Filter>Archivos de recursos\BasicModules</Filter>
+      <Filter>GameCode\BasicModules</Filter>
     </ClInclude>
     <ClInclude Include="p2Defs.h">
-      <Filter>Archivos de recursos\Auxiliar Code</Filter>
+      <Filter>GameCode\Auxiliar Code</Filter>
     </ClInclude>
     <ClInclude Include="p2Point.h">
-      <Filter>Archivos de recursos\Auxiliar Code</Filter>
+      <Filter>GameCode\Auxiliar Code</Filter>
     </ClInclude>
     <ClInclude Include="Log.h">
-      <Filter>Archivos de recursos\Auxiliar Code</Filter>
+      <Filter>GameCode\Auxiliar Code</Filter>
     </ClInclude>
     <ClInclude Include="App.h">
-      <Filter>Archivos de recursos\Core</Filter>
+      <Filter>GameCode\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLreader.h">
+      <Filter>GameCode\Auxiliar Code</Filter>
+    </ClInclude>
+    <ClInclude Include="PugiXml\src\pugiconfig.hpp">
+      <Filter>External Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="PugiXml\src\pugixml.hpp">
+      <Filter>External Libraries</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
