Multiple structural changes
Added dt to the Update method
Changed all Core to Application
Corrected Globlas to Globals
Implemented first skeleton of ModuleGUI

--- a/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj.filters
+++ b/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj.filters
@@ -51,14 +51,11 @@
     <ClCompile Include="PugiXml\src\pugixml.cpp">
       <Filter>External Libraries</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleGUI.cpp">
+      <Filter>GameCode\BasicModules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Globlas.h">
-      <Filter>GameCode\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Module.h">
-      <Filter>GameCode\BasicModules</Filter>
-    </ClInclude>
     <ClInclude Include="Animation.h">
       <Filter>GameCode\Auxiliar Code</Filter>
     </ClInclude>
@@ -94,6 +91,15 @@
     </ClInclude>
     <ClInclude Include="PugiXml\src\pugixml.hpp">
       <Filter>External Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="Globals.h">
+      <Filter>GameCode\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleGUI.h">
+      <Filter>GameCode\BasicModules</Filter>
+    </ClInclude>
+    <ClInclude Include="Module.h">
+      <Filter>GameCode\Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
