--- a/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj
+++ b/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj
@@ -125,6 +125,8 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Boss_Entity.cpp" />
+    <ClCompile Include="Chest_Entity.cpp" />
+    <ClCompile Include="Consumable_Entity.cpp" />
     <ClCompile Include="Enemy_Entiy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Fonts.cpp" />
@@ -139,11 +141,14 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="Player_Entity.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
+    <ClCompile Include="StaticObject_Entity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="App.h" />
     <ClInclude Include="Boss_Entity.h" />
+    <ClInclude Include="Chest_Entity.h" />
+    <ClInclude Include="Consumable_Entity.h" />
     <ClInclude Include="Enemy_Entity.h" />
     <ClInclude Include="EntitiesEnums.h" />
     <ClInclude Include="Entity.h" />
@@ -163,6 +168,7 @@
     <ClInclude Include="Player_Entity.h" />
     <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
+    <ClInclude Include="StaticObject_Entity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
