--- a/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj.filters
+++ b/Warcraft Adventures/Warcraft Adventures/Warcraft Adventures.vcxproj.filters
@@ -38,16 +38,25 @@
       <Filter>EntitySystem</Filter>
     </ClCompile>
     <ClCompile Include="Player_Entity.cpp">
-      <Filter>EntitySystem\Entity\Player</Filter>
+      <Filter>EntitySystem\Entity\Dinamic Entities\Player</Filter>
     </ClCompile>
     <ClCompile Include="Entity.cpp">
       <Filter>EntitySystem\Entity</Filter>
     </ClCompile>
     <ClCompile Include="Boss_Entity.cpp">
-      <Filter>EntitySystem\Entity\Boss</Filter>
+      <Filter>EntitySystem\Entity\Dinamic Entities\Boss</Filter>
     </ClCompile>
     <ClCompile Include="Enemy_Entiy.cpp">
-      <Filter>EntitySystem\Entity\Enemies</Filter>
+      <Filter>EntitySystem\Entity\Dinamic Entities\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="Chest_Entity.cpp">
+      <Filter>EntitySystem\Entity\Static Entities\Chest</Filter>
+    </ClCompile>
+    <ClCompile Include="Consumable_Entity.cpp">
+      <Filter>EntitySystem\Entity\Static Entities\Consumable</Filter>
+    </ClCompile>
+    <ClCompile Include="StaticObject_Entity.cpp">
+      <Filter>EntitySystem\Entity\Static Entities\StaticObject</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -103,7 +112,7 @@
       <Filter>EntitySystem</Filter>
     </ClInclude>
     <ClInclude Include="Player_Entity.h">
-      <Filter>EntitySystem\Entity\Player</Filter>
+      <Filter>EntitySystem\Entity\Dinamic Entities\Player</Filter>
     </ClInclude>
     <ClInclude Include="Entity.h">
       <Filter>EntitySystem\Entity</Filter>
@@ -112,10 +121,19 @@
       <Filter>EntitySystem\Entity</Filter>
     </ClInclude>
     <ClInclude Include="Boss_Entity.h">
-      <Filter>EntitySystem\Entity\Boss</Filter>
+      <Filter>EntitySystem\Entity\Dinamic Entities\Boss</Filter>
     </ClInclude>
     <ClInclude Include="Enemy_Entity.h">
-      <Filter>EntitySystem\Entity\Enemies</Filter>
+      <Filter>EntitySystem\Entity\Dinamic Entities\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="Chest_Entity.h">
+      <Filter>EntitySystem\Entity\Static Entities\Chest</Filter>
+    </ClInclude>
+    <ClInclude Include="Consumable_Entity.h">
+      <Filter>EntitySystem\Entity\Static Entities\Consumable</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticObject_Entity.h">
+      <Filter>EntitySystem\Entity\Static Entities\StaticObject</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -140,14 +158,29 @@
     <Filter Include="EntitySystem\Entity">
       <UniqueIdentifier>{791a5e9e-c547-4e1f-aee7-35c6e0fdaa9d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EntitySystem\Entity\Enemies">
+    <Filter Include="EntitySystem\Entity\Dinamic Entities">
+      <UniqueIdentifier>{e7237daa-ecaf-446b-8f57-ec0d73743d64}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EntitySystem\Entity\Dinamic Entities\Player">
+      <UniqueIdentifier>{528c49f1-892b-4324-a961-fb4eaa0bafe9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EntitySystem\Entity\Dinamic Entities\Enemies">
       <UniqueIdentifier>{fa2b5aa4-a8ab-4d40-8851-a34a2dd4962a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EntitySystem\Entity\Boss">
+    <Filter Include="EntitySystem\Entity\Dinamic Entities\Boss">
       <UniqueIdentifier>{9138b015-38e6-4579-b004-907cc9bb2569}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EntitySystem\Entity\Player">
-      <UniqueIdentifier>{528c49f1-892b-4324-a961-fb4eaa0bafe9}</UniqueIdentifier>
+    <Filter Include="EntitySystem\Entity\Static Entities">
+      <UniqueIdentifier>{5820d6d7-6333-4a1a-88ee-7fddf71bec3b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EntitySystem\Entity\Static Entities\Consumable">
+      <UniqueIdentifier>{b40cfa95-dbee-4b00-9e47-da318d5d5779}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EntitySystem\Entity\Static Entities\Chest">
+      <UniqueIdentifier>{fa4a7c44-b070-4ff4-9c44-1b1bcaad75e8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EntitySystem\Entity\Static Entities\StaticObject">
+      <UniqueIdentifier>{ce9fcb22-0830-4ae2-8616-ba6c77933d80}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
